# velog-dashboard-v2-back-office

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init.sql  manage.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run-kill.sh  run.sh  temp.py
.github/workflows/: run-daily-aggre-set1.yaml  run-daily-aggre-set10.yaml  run-daily-aggre-set11.yaml  run-daily-aggre-set12.yaml  run-daily-aggre-set13.yaml  run-daily-aggre-set14.yaml  run-daily-aggre-set15.yaml  run-daily-aggre-set16.yaml  run-daily-aggre-set17.yaml  run-daily-aggre-set18.yaml  run-daily-aggre-set19.yaml  run-daily-aggre-set2.yaml  run-daily-aggre-set20.yaml  run-daily-aggre-set3.yaml  run-daily-aggre-set4.yaml  run-daily-aggre-set5.yaml  run-daily-aggre-set6.yaml  run-daily-aggre-set7.yaml  run-daily-aggre-set8.yaml  run-daily-aggre-set9.yaml  run-daily-aggre.yaml  run-daily-target-aggre.yaml  run-weekly-analysis.yaml  run-weekly-newsletter.yaml  test-ci.yaml
backoffice/: asgi.py  urls.py  wsgi.py
backoffice/settings/: base.py  local.py  prod.py  test.py
common/: models.py
insight/: models.py  schemas.py
insight/admin/: __init__.py  base_admin.py  user_weekly_trend_admin.py  weekly_trend_admin.py
insight/migrations/: 0001_initial.py
insight/tasks/: base_analysis.py  prompts.py  setup_django.py  user_weekly_trend_analysis.py  weekly_llm_analyzer.py  weekly_newsletter_batch.py  weekly_trend_analysis.py  weekly_user_trend_analysis.py
insight/tests/: conftest.py  test_json_preview_mixin_admin.py  test_models.py  test_user_weekly_trend_admin.py  test_weekly_trend_admin.py
modules/: post_slug_update_batch.py
modules/mail/: schemas.py  (+3 more)
noti/: admin.py  models.py
posts/: admin.py  models.py
scraping/: aggregate_batch.py  aggregate_target_batch.py  apis.py  constants.py  main.py  protocols.py  setup_django.py
tracking/: admin.py  models.py
users/: admin.py  models.py  utils.py
utils/: utils.py
(+67 files in other folders)
