[tool.poetry]
name = "velog-dashboard-v2-back-office"
version = "0.1.0"
description = ""
authors = ["BDlhj <akk808@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
django-cors-headers = "^4.6.0"
django-environ = "^0.11.2"
cryptography = "^43.0.3"
django-timescaledb = "^0.2.13"
psycopg = { extras = ["binary"], version = "^3.2.3" }
aiohttp = "^3.11.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pytest = "^8.3.3"
mypy = "^1.13.0"
pytest-cov = "^6.0.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
pre-commit = "^4.0.1"
ipython = "^8.29.0"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
